<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/log_in"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/edtUserName"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_below="@id/tvLogin"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="25dp"
        android:hint="@string/user_name"
        android:autofillHints=""
        android:inputType="text"
        android:layout_marginStart="25dp" tools:targetApi="o" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_below="@id/edtUserName"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:hint="@string/password"
        android:inputType="textPassword"
        tools:targetApi="o" />

    <Button
        android:id="@+id/btLogin"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_below="@id/edtPassword"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="30dp"
        android:background="#7AEC7F"
        android:text="@string/bt_log_in"
        android:layout_marginStart="25dp" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:text="@string/tv1"
        android:textSize="17sp"
        android:layout_below="@id/btLogin"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp" />

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_below="@id/btLogin"
        android:layout_marginStart="240dp"
        android:layout_marginLeft="240dp"
        android:layout_marginTop="200dp"
        android:text="@string/sign_up"
        android:textSize="17sp" />

</RelativeLayout>