<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main2Activity">

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/tv_sign_up"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/edtUserNameSignUp"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_below="@id/tvSignUp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="25dp"
        android:hint="@string/user_name"
        android:autofillHints=""
        android:inputType="text"
        android:layout_marginStart="25dp" tools:targetApi="o" />

    <EditText
        android:id="@+id/edtPasswordSignUp"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_below="@id/edtUserNameSignUp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:hint="@string/password"
        android:inputType="textPassword"
        tools:targetApi="o" />

    <Button
        android:id="@+id/btCreateAccount"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:layout_below="@id/edtPasswordSignUp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="50dp"
        android:background="#7BB9D5"
        android:text="@string/create_a_new_account"
        android:textSize="20sp" />


</RelativeLayout>